--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -1,4 +1,17 @@
 .search-section{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.search-section form{
+    display: flex;
+    flex-direction: column;
+}
+.search-section button{
+    margin-top: 20px;
+    height: 24px;
+    align-self: center;
+}
+.search-section label{
+    margin-right: 20px;
 }
