--- a/src/SearchResults/SearchResults.css
+++ b/src/SearchResults/SearchResults.css
@@ -2,4 +2,13 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: center;
+    list-style-type: none;
+}
+ul li{
+    width: 100%;
+}
+.initial-search-placeholder{
+    margin-top: 4%;
+    font-style: italic;
+    color: rgb(.5, .5, .5, .4);
 }
